# fastapi-example

poetry_example_project/fastapi_microservice/: Dockerfile  config.ini  deployment.yaml  docker-compose.yml  pyproject.toml  service.yaml
poetry_example_project/fastapi_microservice/app/: main.py
project_basic/: data.py  main.py
