[tool.poetry]
name = "fastapi-microservice"
version = "0.1.0"
description = ""
authors = ["djs manoj <djsmanoj0000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
gunicorn = "^22.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
